[package]
name = "vec-2d"
version = "0.1.0"
authors = ["Jasper van der Werf <jaspervdwerf@gmail.com>"]
edition = "2018"
description = "A simple crate for creating a single vector with coordinate based access, and a few nice functions for easy use."
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]