[package]
name = "board"
version = "0.2.2"
authors = ["jvdwrf"]
edition = "2018"
description = "A simple crate for creating a single vector with coordinate based access, and a few nice functions for easy use."
readme = "README.md"
repository = "https://github.com/jvdwrf/vec-2d"
license = "Apache-2.0"
keywords = ["vector", "vec", "2d", "vec2d", "gamefield"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
